--- a/examples/index.html
+++ b/examples/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Deepdots Popup SDK - Fake Website</title>
-    <link rel="stylesheet" href="examples/style.css"/>
+    <link rel="stylesheet" href="../src/assets/style.css"/>
     <style>
         /* Modern, elegant refresh */
         :root {
