--- a/examples/index.html
+++ b/examples/index.html
@@ -423,7 +423,7 @@
     <script type="importmap">
         {
           "imports": {
-            "@magicfeedback/popup-sdk": "../dist/index.mjs"
+            "@magicfeedback/popup-sdk": "https://cdn.jsdelivr.net/npm/@magicfeedback/popup-sdk@1.0.11/dist/index.mjs"
           }
         }
     </script>
