--- a/examples/product.html
+++ b/examples/product.html
@@ -338,7 +338,7 @@
     <script type="importmap">
         {
           "imports": {
-            "@magicfeedback/popup-sdk": "../dist/index.mjs"
+            "@magicfeedback/popup-sdk": "https://cdn.jsdelivr.net/npm/@magicfeedback/popup-sdk@1.0.11/dist/index.mjs"
           }
         }
     </script>
